--- a/con.html
+++ b/con.html
@@ -135,12 +135,12 @@
                     <p id="send-note">Contact</p>
                     <hr>
                     <div id="contact-info">
-                        <p>98/13 Wheeler Road Extension</p>
-                        <p>Near Basha Store</p>
-                        <p>Cooke Town</p>
+                        <p>somewhere</p>
+                        <p>landmard</p>
+                        <p>Town</p>
 
-                        <p>Bangalore KA 560005 IN</p>
-                        <p>+91.8904040009</p>
+                        <p>state</p>
+                        <p>number</p>
                     </div>
                 </div>
 
@@ -162,25 +162,27 @@
     <!-- footer-->
     <footer>
         <div class="container8">
-            
             <div class="container9">
 
-                <p>Copyright @ Tara Rao. All rights reserved.</p>
+
+                <p>somthing will come here.</p>
                 <div>
                     <img src="//nebula.wsimg.com/01f11d68b9f92d7aa8b77ed39a24a54e?AccessKeyId=531592D248B589D87A56&amp;disposition=0&amp;alloworigin=1"
                         style="vertical-align:middle;width:23px;height:23px;" alt="twitter-img">
                     <img src="//nebula.wsimg.com/c9d696e2a26ab0ae2ed03ff5f5cd4c89?AccessKeyId=531592D248B589D87A56&amp;disposition=0&amp;alloworigin=1"
                         style="vertical-align:middle;width:23px;height:23px;" alt="facebook-img">
-               </div>
+                </div>
 
 
             </div>
             <div>
-                <em class="food">built with ❤️ by <a id="foot-link" href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all" target="_blank"><u> T4G Labs Fellows</u> </a>
-                    & Hosted Freely on <a id="foot-link" href="https://ourgroundworks.org/" target="_blank"><u> Github Pages</u> </a>
+                <em class="food">built with ❤️ by <a id="foot-link" href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all" target="_blank"><u> We buildr wave</u> </a>
+                    & Hosted Freely on <a id="foot-link" href="" target="_blank"><u> Github Pages</u> </a>
                 </em>
             </div>
 
+
+            
         </div>
 
 
