--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="container9">
 
 
-                <p>Copyright @ Tara Rao. All rights reserved.</p>
+                <p>somthing will come here.</p>
                 <div>
                     <img src="//nebula.wsimg.com/01f11d68b9f92d7aa8b77ed39a24a54e?AccessKeyId=531592D248B589D87A56&amp;disposition=0&amp;alloworigin=1"
                         style="vertical-align:middle;width:23px;height:23px;" alt="twitter-img">
@@ -319,8 +319,8 @@
 
             </div>
             <div>
-                <em class="food">built with ❤️ by <a id="foot-link" href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all" target="_blank"><u> T4G Labs Fellows</u> </a>
-                    & Hosted Freely on <a id="foot-link" href="https://ourgroundworks.org/" target="_blank"><u> Github Pages</u> </a>
+                <em class="food">built with ❤️ by <a id="foot-link" href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all" target="_blank"><u> We buildr wave</u> </a>
+                    & Hosted Freely on <a id="foot-link" href="" target="_blank"><u> Github Pages</u> </a>
                 </em>
             </div>
 
