--- a/program2.html
+++ b/program2.html
@@ -325,7 +325,7 @@
 
         </div>
         <div>
-            <em class="food">built with ❤️ by <a id="foot-link" href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all" target="_blank"><u> We buildr wave</u> </a>
+            <em class="food">built with ❤️ by <a id="foot-link" href="https://webuildr.framer.ai" target="_blank"><u> We buildr wave</u> </a>
                 & Hosted Freely on <a id="foot-link" href="" target="_blank"><u> Github Pages</u> </a>
             </em>
         </div>
